header alignment fixed

--- a/styles/main.less
+++ b/styles/main.less
@@ -81,7 +81,7 @@
     flex: auto;
     align-items: center;
     transition: all ease-out 0.2s;
-    padding: 40px 0 50px 64px;
+    padding-left: 64px;
 
     &__city {
       cursor: pointer;
